# PaperPwn

./: .gitignore  DATA_LAYER_VERIFICATION.md  FINAL_BUILD_REPORT.md  FINAL_CHECKLIST.md  LICENSE  README.md  VERIFICATION.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  修改总结.md
assets/: index.html
docs/: BUILD_GUIDE.md  EXCEPTION_TESTING.md  INTEGRATION_REPORT.md  RUST_BUILD_REPORT.md  TEST_RESULTS_SUMMARY.md  mindmap_integration_plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  library_fs.rs  main.rs  metadata.rs
src/components/: AiChatPanel.tsx  AnnotationSidebar.tsx  AppShell.tsx  DeleteConfirmDialog.tsx  ErrorBoundary.tsx  HighlightPopup.tsx  MetadataEditorDialog.tsx  MindMapCanvas.tsx  NoSearchResult.tsx  NoteEditor.tsx  PdfViewer.tsx  ReactPdfViewerPoc.tsx  RecentPapers.tsx  TranslationPanel.tsx
src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  popover.tsx  separator.tsx
src/lib/: api.ts  events.ts  fs.ts  theme.ts
src/lib/pdf/: text-layer-selection.ts  text-layer-spacers.ts
src/lib/stores/: ai-store.ts  annotation-store.ts  mindmap-store.ts  paper-store.ts  pdf-viewer-store.ts
src/pages/: LibraryList.tsx  ReaderView.tsx  Settings.tsx
src/styles/: globals.css
verification/: tauri_build_verification.md
