[package]
name = "paperpwn"
version = "1.0.0"
description = "A paper management desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "paperpwn_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "PaperPwn"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = { version = "0.30", features = ["rwh_06"] }
thiserror = "1"
lopdf = "0.40"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = false
